1. deprecated 메소드 처리